# -RAG-with-LlamaIndex---Project

./: README.md  agent.py  app.py  extract_data.py  extracted_data.json  my_workflow.html  prepare.py  pyproject.toml
bakery-rag/.claude/docs/: changelog.md  decisions.md  warnings.md
bakery-rag/.kiro/notes/: email_service.md  open_bugs.md  secrets_management.md
bakery-rag/.windsurf/docs/: architecture.md  db_schema.md  ui_rules.md
