[project]
name = "rag-with-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.19.0",
    "llama-index>=0.14.22",
    "llama-index-embeddings-cohere>=0.8.0",
    "llama-index-llms-cohere>=0.8.0",
    "llama-index-utils-workflow>=0.11.0",
    "llama-index-vector-stores-pinecone>=0.8.0",
    "netfree-unstrict-ssl>=0.1.3",
    "pydantic>=2.13.4",
    "pyvis>=0.3.2",
]
